Executable renamed to wham. A second exe generated for reading from files. Still mismatch in outputs.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,8 @@
-# compile in debug mode
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release CACHE STRING
       "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
       FORCE)
 ENDIF(NOT CMAKE_BUILD_TYPE)
-
-# FIND_PACKAGE(VTK)
-# IF(VTK_FOUND)
-#   INCLUDE(${VTK_USE_FILE})
-#   INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIR})
-# ELSE(VTK_FOUND)
-# #  MESSAGE(FATAL_ERROR "Please set VTK_DIR.")
-#   FIND_PATH(VTK_DIR VTKConfig.cmake /usr/local/lib/vtk-5.4)
-#   INCLUDE(${VTK_USE_FILE})
-# #  FIND_PATH(VTK_INCLUDE_DIR vtkActor.h /usr/local/include/vtk-5.4)
-# ENDIF(VTK_FOUND)
-# 
-# FIND_PATH(LMX_INCLUDE_DIR HINTS ${PROJECT_SOURCE_DIR}/LMX-1.0/src NAMES LMX/lmx.h)
 
 # Make sure the compiler can find include files.
 include_directories (
@@ -30,7 +16,8 @@ ${GMM_INCLUDE_DIR}
 # Make sure the linker can find the Hello library once it is built.
 link_directories (${MkniX_BINARY_DIR}/libmknix)
 
-add_executable (MkniX mknix.cpp)
+add_executable (wham wham.cpp)
+add_executable (wham-files wham-files.cpp)
 
 
 # link_directories ( ${VTK_DIR})
@@ -44,6 +31,9 @@ add_executable (MkniX mknix.cpp)
 
 link_directories ( ${PROJECT_BINARY_DIR})
 # Link the executable to the VTK libraries.
-target_link_libraries ( MkniX
+target_link_libraries ( wham
+   mknixlib
+)
+target_link_libraries ( wham-files
    mknixlib
 )
